WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151642
Web Inspector: using "Reload Web Inspector" when docked breaks dock-specific styles
https://bugs.webkit.org/show_bug.cgi?id=151642
Summary
Web Inspector: using "Reload Web Inspector" when docked breaks dock-specific ...
Blaze Burg
Reported
2015-11-28 16:13:16 PST
Follow-up bug fix.
Attachments
Proposed Fix
(2.62 KB, patch)
2015-11-29 23:15 PST
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-11-28 16:13:38 PST
<
rdar://problem/23681218
>
Blaze Burg
Comment 2
2015-11-29 23:15:08 PST
Created
attachment 266239
[details]
Proposed Fix
WebKit Commit Bot
Comment 3
2015-11-30 11:25:25 PST
Comment on
attachment 266239
[details]
Proposed Fix Clearing flags on attachment: 266239 Committed
r192809
: <
http://trac.webkit.org/changeset/192809
>
WebKit Commit Bot
Comment 4
2015-11-30 11:25:29 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug