Web Inspector: using "Reload Web Inspector" when docked breaks dock-specific styles https://bugs.webkit.org/show_bug.cgi?id=151642

Reviewed by Timothy Hatcher.

After a frontend loads, explicitly tell it about the current dock
state. This is necessary for force-reloading the inspector, since
the dock state isn't sent from UIProcess in this case.

* WebProcess/WebPage/WebInspectorUI.cpp:
(WebKit::WebInspectorUI::frontendLoaded):
(WebKit::WebInspectorUI::setDockingUnavailable):
* WebProcess/WebPage/WebInspectorUI.h:


Canonical link: https://commits.webkit.org/169770@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192809 268f45cc-cd09-0410-ab3c-d52691b4dbfc